--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,20 +5,17 @@ pipeline {
             step {
                 sh "mvn clean package -DskipTests"
             }
-            steps {
-                sh 'mvn clean package -DskipTests'
-            }
         }
         stage('Build Image') {
             steps {
-                sh "docker build -t selenium-udemy-java"
+                sh "docker build -t selenium-udemy-java ."
             }
         }
         stage('Push Image') {
             steps {
-                withCredentials([usernamePassword(credentialId: 'dockerhub', passwordVariable: 'pass', usernameVariable: 'user')]
-                sh "docker login --username=${USER} --password=${pass}"
-                sh "docker push selenium-udemy-java:latest"
+                withCredentials([usernamePassword(credentialId: 'dockerhub', passwordVariable: 'pass', usernameVariable: 'user')])
+                    sh "docker login --username=${USER} --password=${pass}"
+                    sh "docker push selenium-udemy-java:latest"
             }
         }
     }
