--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent none
     stages {
         stage('Build Jar') {
-            step {
+            steps {
                 sh "mvn clean package -DskipTests"
             }
         }
