--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-    agent none
+    agent any
     stages {
         stage('Build Jar') {
             steps {
@@ -14,7 +14,7 @@ pipeline {
         stage('Push Image') {
             steps {
                 withCredentials([usernamePassword(credentialId: 'dockerhub', passwordVariable: 'pass', usernameVariable: 'user')])
-                    sh "docker login --username=${USER} --password=${pass}"
+                    sh "docker login --username=${user} --password=${pass}"
                     sh "docker push selenium-udemy-java:latest"
             }
         }
