--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,9 +13,10 @@ pipeline {
         }
         stage('Push Image') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'pass', usernameVariable: 'user')])
-                sh "docker login --username=${user} --password=${pass}"
-                sh "docker push selenium-udemy-java:latest"
+                withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'pass', usernameVariable: 'user')]) {
+                    sh "docker login --username=${user} --password=${pass}"
+                    sh "docker push selenium-udemy-java:latest"
+                }
             }
         }
     }
