--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,14 +8,14 @@ pipeline {
         }
         stage('Build Image') {
             steps {
-                sh "docker build -t selenium-udemy-java ."
+                sh "docker build -t grayes/selenium-udemy-java ."
             }
         }
         stage('Push Image') {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'pass', usernameVariable: 'user')]) {
                     sh "docker login --username=${user} --password=${pass}"
-                    sh "docker push selenium-udemy-java:latest"
+                    sh "docker push grayes/selenium-udemy-java:latest"
                 }
             }
         }
