--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('Build Image') {
             steps {
-                sh "docker build -t grayes/selenium-udemy-java ."
+                sh "docker build -v $HOME/.m2:/root/.m2 -t grayes/selenium-udemy-java ."
             }
         }
         stage('Push Image') {
